[package]
name = "valve_log_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
itertools = "0.13.0"
logwatcher = "0.1.1"
once_cell = "1.19.0"
ratatui = "0.27.0"
regex = "1.10.5"
tui-input = "0.9.0"
